1).The column in IkonGridView is determined by the width; 2).Fix the bug that the description text in TileView is not aligned

--- a/components/src/main/resources/com/dlsc/jfxcentral2/theme.css
+++ b/components/src/main/resources/com/dlsc/jfxcentral2/theme.css
@@ -3265,6 +3265,7 @@
     -fx-text-fill: -grey-60;
     -fx-cursor: hand;
     -fx-padding: 0 20px 5px 20px;
+    -fx-alignment: top-left;
 }
 
 .tile-view:lg > .content-box > .flip-view .front-box .description {
